# rubrc

./: .gitignore  ABI.md  Cargo.toml  GEMINI.md  README.md  RELEASE.md  bun.lockb  deno_test.ts  deno_test_parallel.ts  index.html  lsp_cli_test.ts  lsp_cli_test_bun.ts  lsp_syntax_error_test.ts  lsp_test_util_worker.ts  lsp_test_worker.ts  package-lock.json  package.json  temp_worker_test.ts  test_debug.rs  test_panic.ts  test_parse.ts  test_parse_tar_eof.ts  test_parse_tar_eof2.ts  test_run.ts  test_slice.ts  test_tar_loop.ts  test_tar_name.ts  test_tar_trunc.ts  test_validate.ts
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: static.yml
assets/: css.worker-CZFUz3tL.js  cssMode-21Ak3tYc.js  editor.worker-D97G_pyA.js  freemarker2-C1egb8Ul.js  handlebars-DQt2RHx8.js  html-Cyu-Y-Zo.js  html.worker-DiL2AjlA.js  htmlMode-B9VS59me.js  index-CbdARTq8.css  index-DBjFvkbi.js  index-DITC4IKB.js  index-zNXj6S8E.js  javascript-CXP8vhrF.js  json.worker-CfN83P36.js  jsonMode-ClQKZApw.js  liquid-BCZVCvMt.js  llvm-y0xlpkPY.js  mdx-Ct4RvFQ7.js  python-CPmcLxtO.js  razor-B_gSopmX.js  rustc-BE50aTE-.js  style-DpFopZ1l.css  thread_spawn-BZ5YoPRh.js  tsMode-BfaeHnCh.js  typescript-B_B83nHN.js  util_cmd-T00NCR0H.js  worker-CsBA4KtP.js  worker_background_worker-BEBzMHuk.js  xml-DghrTQeB.js  yaml-C4hx0shB.js
crates/rustc_mock_crate/: Cargo.toml
crates/rustc_opt/: Cargo.toml
crates/test_wvl_vfs/: Cargo.toml
crates/vfs/: Cargo.toml  llvm_mock.wasm  mock_llvm.cpp  mock_rustc.rs  rustc_mock.wasm  shell_tool.wasm  temp.rs  test_parse.rs  vfs_shell.wasm
crates/vfs-rustc-twice/: Cargo.toml
crates/vfs-rustc-twice/src/: lib.rs  process.rs
crates/vfs-shell/: Cargo.toml
crates/vfs-shell/src/: main.rs
crates/vfs/rustc_mock_crate/: Cargo.toml
crates/vfs/rustc_mock_crate/src/: main.rs
crates/vfs/src/: command.rs  filesystem_sync.rs  lib.rs  memory_manager.rs  process.rs  shell.rs
crates/vfs/wit/: mai.wit  vfs-host.wit
crates/wasm-inspect/: Cargo.toml
docs/: migrate-ts-to-rust.md  webshell-rustc-handoff.md  webshell-rustc-hang-debug.md
lib/: package-lock.json  package.json  vite.config.ts
lib/src/: brotli_stream.ts  child_process_bridge.ts  get_llvm_wasm.ts  get_rustc_wasm.ts  get_wasm.ts  (+6 more)
page/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: .rubrc_lsp_check.ts  .rubrc_lsp_check_worker.ts  build_preopen.ts  copy_vfs_bindings.mjs  debug_rustc_shell_thread_spawn.ts  debug_rustc_shell_thread_spawn_worker.ts  prepare-vfs-asset.mjs  publish-pages-dist.sh  rustc_memory_reserve_regression_test.ts  sysroot_cache.ts  sysroot_cache_test.ts  test-split.mjs  test_rustc_fixed.ts  test_rustc_fixed_worker.ts  test_rustc_inspect.ts  test_rustc_inspect_worker.ts  verify-vfs-asset.mjs  vfs_build_script_test.ts  vfs_child_process_bridge_test.ts  vfs_child_process_import_test.ts  vfs_debug_cargo_add_test.ts  vfs_debug_cargo_info_test.ts  vfs_debug_cargo_pipe_test.ts  vfs_debug_cargo_run_test.ts  vfs_debug_config.ts  vfs_debug_config_test.ts  vfs_debug_shell.ts  vfs_debug_shell_worker.ts  vfs_default_env_test.ts  vfs_http_bridge_test.ts  vfs_http_import_test.ts  vfs_unwind_config_test.ts  wasm_atomic_inspect.ts  webshell_base_call_capacity_test.ts
test_workspace/: hello.txt
(+75 files in other folders)
