[package]
name = "test_wvl_vfs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasi_virt_layer = { version = "0.5.1", default-features = false, features = [
  "dynamic-fs",
  "threads",
  "std"
] }
const_struct = "0.6.6"
wit-bindgen = { version = "0.57.1", default-features = false, features = [
  "macros",
  "std",
] }
parking_lot = "0.12"