[package]
name = "vfs-rustc-twice"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
debugging = ["wasi_virt_layer/trace"]
default = []

[dependencies]
wasi_virt_layer = { version = "0.5", default-features = false, features = [
  "dynamic-fs",
  # "embedded-fs",
  "threads",
  "own-memory",
] }
const_struct = "0.6.6"
serde_json = "1.0.140"
parking_lot = { version = "0.12.5", features = ["nightly"] }
# version = "0.2.6",
wit-bindgen = { version = "0.57.1", default-features = false, features = [
  "macros",
  "std",
] }
dashmap = "6.2.1"
