[package]
name = "vfs-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
# wasi-shell = { path = "../../../sl-rust/crates/wasi-shell" }
wasi-shell = "1.0.17"
colored = "2"
dashmap = "6.1.0"
# wasibox-core = { path = "../../../sl-rust/crates/wasibox-core" }
wasibox-core = "1.0.17"
strum = { version = "0.28.0", features = ["derive"] }
unicode-width = "0.2"
