[package]
name = "vfs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = []
full-tools = []

[dependencies]
wasi_virt_layer = { version = "0.3.6", default-features = false, features = [
  "dynamic-fs",
  # "embedded-fs",
  "threads",
] }
const_struct = "0.6.6"
parking_lot = { version = "0.12.5", features = ["nightly"] }
# version = "0.2.6",
wit-bindgen = { version = "0.57.1", default-features = false, features = [
  "macros",
  "std",
] }
